# Pente-game

./: .gitignore  LICENCE  LICENSE  README.md
back_end/: CMakeLists.txt  init.sql  json_helpers.c  main.c  types.h
front_end/: main.py
front_end/assets/styles/: theme.json
front_end/classes/: AudioManager.py  GUIElementsManager.py  RequestManager.py
front_end/pion_generators/: generate_one_ring.py  generate_sauron_eye.py
front_end/styles/: theme.json
